Charles profile page
I worked on trying to make Charles bad and good style pages better.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
   	<title>Charles Nguyen</title>
   	<link rel="stylesheet" type="text/css" href="css/badstyle.css">
-  	<!-- <link rel="stylesheet" type="text/css" href="css/goodstyle.css"> -->
+<!--   	<link rel="stylesheet" type="text/css" href="css/goodstyle.css">
+ -->    <link rel="icon" type="text/css" href="img/veg.gif">
   </head>
   <body>
     <div class="wrapper">
